:sparkles: fix layout issues on large screens and adapt for responsive

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -3,18 +3,20 @@
 
 .footer {
   background-color: $purple;
+  width: 100%;
   &__bottom {
     display: flex;
     flex-wrap: wrap;
-    text-align: center;
+    align-items: center;
     justify-content: center;
     gap: 5px;
-    width: 100vw;
     line-height: 1.5rem;
     letter-spacing: 0.07rem;
     padding: 1rem 0;
     font-size: 0.7rem;
+    text-align: center;
     @include sm {
+      flex-direction: column;
       padding: 0.5rem 1rem;
     }
   }
