--- a/src/components/Layout/Layout.scss
+++ b/src/components/Layout/Layout.scss
@@ -5,16 +5,12 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  padding: 2rem 6rem 0 6rem;
   align-items: center;
   width: 100vw;
   overflow: visible;
   &--isOpened {
     position: fixed;
     overflow: hidden;
-  }
-  @include sm {
-    padding: 0 2rem;
   }
   &__content {
     display: flex;
@@ -25,5 +21,8 @@
     max-width: 1300px;
     margin-left: auto;
     margin-right: auto;
+    @include sm {
+      padding: 0 2rem;
+    }
   }
 }
